# protocol

./: .gitignore  README.md  pyproject.toml
src/hardware/: __init__.py
src/hardware/protocol/: README.md
src/hardware/protocol/hub/v1/: hub.proto
src/hardware/protocol/scripts/: generate_python_stubs.py
src/protocol/: README.md  __init__.py
src/protocol/commands/v1/: abort.toml  get_state.toml  home.toml  initialize_detector.toml  initialize_motion.toml  move_to.toml  pause.toml  resume.toml  start_exposure.toml  stop.toml
src/protocol/scripts/: generate_python_stubs.py
tests/: conftest.py  test_assets.py  test_protocol_guardrails.py
