[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eosdx-protocol"
version = "0.1.0"
description = "Protocol definitions and assets for Eos-Dx hardware control"
readme = "README.md"
requires-python = ">=3.7"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["protocol*"]
namespaces = true

[tool.setuptools.package-data]
"protocol" = [
  "README.md",
  "commands/**/*.toml",
  "generated/**/*.py",
  "hub/**/*.proto",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
